--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Looking for information about the courses that you are going to take next semester? Maybe checking how good a teacher is? See it on <span><img src="img/white-seagull.png" width="60"></span>.</h1>
+                            <h1>Looking for information about the courses that you are going to take next semester? Maybe checking how good a teacher is? See it on <span><img src="img/white-seagull.png" width="60"></span></h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a>
                         </div>
                     </div>
