--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <p>Download now to get started!</p>
                     <div class="badges">
                         <!--<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>-->
-                        <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                        <a class="badge-link" href="https://itunes.apple.com/us/app/treep/id1260866070?ls=1&mt=8"><img src="img/app-store-badge.svg" alt=""></a>
                     </div>
                 </div>
             </div>
