--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                 <div class="col-sm-6">
                     <img src="img/1.jpg" class="img-responsive">
                 </div>
+                <div class="col-sm-6">
+                    <img src="img/2.jpg" class="img-responsive">
+                </div>
+                <div class="col-sm-6">
+                    <img src="img/6.jpg" class="img-responsive">
+                </div>
             </div>
         </div>
     </section>
